# demo

./: README.md  framerate_change_instructions.txt  test.py
Documentation/: framerate_change_instructions.txt
Multi_Agent_Reinforcement_Learning_Game/: ShrimpGame_D4PG_MARL.ipynb
RAG_LLM_DEMO/: RAG_LLM_DEMO.ipynb
Reinforcement Learning Robot/: test.py
Reinforcement Learning Robot/Documentation/: reload_backup_instructions.txt  robot_initialization_instructions. (copy).txt  robot_initialization_instructions..txt
Reinforcement Learning Robot/jaybot/: package.xml
Reinforcement Learning Robot/rl_custom_messages/: package.xml
Stock Market Transformer/: Data_Partition_builder.ipynb  FinancialTransformer.ipynb
install/: local_setup.sh  setup.sh
jaybot/: CMakeLists.txt  package.xml
jaybot/include/jaybot/: RangeSensor (copy).h  RangeSensor.h
jaybot/launch/: jaybotv1_rlbot.py  jaybotv1_rlcontrol.py
jaybot/launch/runs/Aug04_07-31-04_rlcontrolJayNetv1.0/: events.out.tfevents.1691159464.rlcontrol
jaybot/launch/runs/Aug04_07-31-45_rlcontrolJayNetv1.0/: events.out.tfevents.1691159505.rlcontrol
jaybot/launch/runs/Aug06_05-23-19_rlcontrolJayNetv1.0/: events.out.tfevents.1691324599.rlcontrol
jaybot/launch/runs/Aug06_05-41-04_rlcontrolJayNetv1.0/: events.out.tfevents.1691325664.rlcontrol
jaybot/scripts/: face_detection_test (functional_confirmation).py  face_detection_test (pre-confirmation).py  face_detection_test(functional).py  face_detection_test(straightbackup).py  face_detection_test.py  face_detection_test_modaug.py  rl_mind (copy).py  rl_mind(camerafunctional.py  rl_mind(emotionserver_functional).py  rl_mind(no_buffer).py  rl_mind(speaker_functional7_20).py  rl_mind.py  robot_monitor.py
jaybot/scripts/runs/Jun17_06-46-33_rlcontrolJayNetv1.0/: events.out.tfevents.1687009593.rlcontrol
jaybot/scripts/runs/Jun17_07-51-20_rlcontrolJayNetv1.0/: events.out.tfevents.1687013480.rlcontrol
jaybot/src/: camera_publisher (copy).cpp  camera_publisher(save).cpp  camera_publisher.cpp  camera_publisher2.cpp  image_debugger (copy).cpp  image_debugger.cpp  microphone_publisher.cpp  range_publisher (copy).cpp  range_publisher.cpp  range_subscriber (copy).cpp  range_subscriber.cpp  rl_server (copy).cpp  rl_server.cpp  shrimpgame_d4pg_marl.py  speaker_controller (copy).cpp  speaker_controller.cpp  test_v2.py
jaybot/src/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
jaybot/src/runs/Jun17_07-53-46_rlcontrolJayNetv1.0/: events.out.tfevents.1687013626.rlcontrol
log/: latest_build
rl_custom_messages/: CMakeLists.txt  package.xml
rl_custom_messages/msg/: ImageArray.msg
robot_ws_backup/: output.txt
robot_ws_backup/install/: local_setup.sh  setup.sh
robot_ws_backup/src/jaybot/: CMakeLists.txt
robot_ws_backup/src/jaybot/src/: range_publisher.cpp
runs/Aug02_05-48-06_rlcontrolJayNetv1.0/: events.out.tfevents.1690980486.rlcontrol
runs/Aug02_05-48-52_rlcontrolJayNetv1.0/: events.out.tfevents.1690980532.rlcontrol
runs/Aug02_06-06-49_rlcontrolJayNetv1.0/: events.out.tfevents.1690981609.rlcontrol
runs/Aug02_06-08-37_rlcontrolJayNetv1.0/: events.out.tfevents.1690981717.rlcontrol
runs/Aug03_05-55-35_rlcontrolJayNetv1.0/: events.out.tfevents.1691067335.rlcontrol
runs/Aug06_06-14-41_rlcontrolJayNetv1.0/: events.out.tfevents.1691327681.rlcontrol
runs/Aug06_06-19-45_rlcontrolJayNetv1.0/: events.out.tfevents.1691327985.rlcontrol
runs/Aug06_06-23-02_rlcontrolJayNetv1.0/: events.out.tfevents.1691328182.rlcontrol
runs/Aug06_06-30-58_rlcontrolJayNetv1.0/: events.out.tfevents.1691328658.rlcontrol
runs/Aug06_13-53-56_rlcontrolJayNetv1.0/: events.out.tfevents.1691355236.rlcontrol
runs/Aug06_14-33-09_rlcontrolJayNetv1.0/: events.out.tfevents.1691357589.rlcontrol
runs/Aug08_06-51-56_rlcontrolJayNetv1.0/: events.out.tfevents.1691502716.rlcontrol
runs/Aug10_06-30-37_rlcontrolJayNetv1.0/: events.out.tfevents.1691674237.rlcontrol
runs/Aug16_16-50-30_rlcontrolJayNetv1.0/: events.out.tfevents.1692229830.rlcontrol
runs/Aug22_06-10-29_rlcontrolJayNetv1.0/: events.out.tfevents.1692709829.rlcontrol
runs/Aug22_06-31-19_rlcontrolJayNetv1.0/: events.out.tfevents.1692711079.rlcontrol
runs/Aug22_06-31-59_rlcontrolJayNetv1.0/: events.out.tfevents.1692711119.rlcontrol
runs/Aug22_06-36-44_rlcontrolJayNetv1.0/: events.out.tfevents.1692711404.rlcontrol
runs/Aug22_06-41-28_rlcontrolJayNetv1.0/: events.out.tfevents.1692711688.rlcontrol
runs/Aug22_06-43-35_rlcontrolJayNetv1.0/: events.out.tfevents.1692711815.rlcontrol
runs/Aug22_06-51-11_rlcontrolJayNetv1.0/: events.out.tfevents.1692712271.rlcontrol
runs/Aug23_05-07-13_rlcontrolJayNetv1.0/: events.out.tfevents.1692792433.rlcontrol
runs/Aug23_05-25-47_rlcontrolJayNetv1.0/: events.out.tfevents.1692793547.rlcontrol
runs/Aug23_05-31-28_rlcontrolJayNetv1.0/: events.out.tfevents.1692793888.rlcontrol
runs/Aug23_05-36-23_rlcontrolJayNetv1.0/: events.out.tfevents.1692794183.rlcontrol
runs/Aug23_06-04-19_rlcontrolJayNetv1.0/: events.out.tfevents.1692795859.rlcontrol
runs/Aug23_07-08-21_rlcontrolJayNetv1.0/: events.out.tfevents.1692799701.rlcontrol
runs/Aug23_07-12-41_rlcontrolJayNetv1.0/: events.out.tfevents.1692799961.rlcontrol
runs/Aug23_07-13-53_rlcontrolJayNetv1.0/: events.out.tfevents.1692800033.rlcontrol
runs/Aug23_07-14-18_rlcontrolJayNetv1.0/: events.out.tfevents.1692800058.rlcontrol
runs/Jul02_12-12-05_rlcontrolJayNetv1.0/: events.out.tfevents.1688325125.rlcontrol
runs/Jul05_07-27-42_rlcontrolJayNetv1.0/: events.out.tfevents.1688567262.rlcontrol
runs/Jul05_07-30-48_rlcontrolJayNetv1.0/: events.out.tfevents.1688567448.rlcontrol
runs/Jul05_07-33-02_rlcontrolJayNetv1.0/: events.out.tfevents.1688567582.rlcontrol
runs/Jul05_07-33-46_rlcontrolJayNetv1.0/: events.out.tfevents.1688567626.rlcontrol
runs/Jul05_07-34-03_rlcontrolJayNetv1.0/: events.out.tfevents.1688567643.rlcontrol
runs/Jul05_07-36-49_rlcontrolJayNetv1.0/: events.out.tfevents.1688567809.rlcontrol
runs/Jul05_07-48-23_rlcontrolJayNetv1.0/: events.out.tfevents.1688568503.rlcontrol
(+489 files in other folders)
