<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>jaybot</name>
  <version>0.0.0</version>
  <description>An experimental Robot</description>
  <maintainer email="ncr5012@gmail.com">rlagent</maintainer>
  <license>No use is authorized for anybody</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <build_depend>builtin_interfaces</build_depend>
  <build_depend>rclpy</build_depend>
  <build_depend>python3-ament-index-python</build_depend>
  <exec_depend>builtin_interfaces</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>python3-ament-index-python</exec_depend>
  

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>rl_custom_messages</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

